# NimbusScroll

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  main.py  requirements.txt
SmoothedScroll/: SmoothedScroll.py  __init__.py
SmoothedScroll/models/: __init__.py  easing_function.py  mouse_hook.py  scroll_control.py  timer_task.py
SmoothedScroll/utils/: __init__.py  scroll_listener.py
src/: app.rs  easing.rs  engine.rs  main.rs  tray-wayland.rs  tray-windows.rs  tray.rs  wayland.rs  windows.rs
ui/: app.slint
utils/: __init__.py  blocklist.py  config.py  find_games.py
