[package]
name = "nimbusscroll"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.50.0", features = ["rt"] }
slint = "1.15.1"

[target.'cfg(target_os = "windows")'.dependencies]
winres = "0.1.12"
tray-icon = "0.14"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
ksni = { version = "0.3.3", default-features = false, features = ["async-io"] }

[build-dependencies]
slint-build = "1.15.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
strip = true
